--- a/app.json
+++ b/app.json
@@ -37,6 +37,12 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "1d57ab55-b8ae-4dea-8f56-80628051b38c"
+      }
     }
   }
 }
