--- a/app.json
+++ b/app.json
@@ -25,7 +25,9 @@
         {
           "photosPermission": "Allow photo-app-fe to access your photos.",
           "savePhotosPermission": "Allow photo-app-fe to save photos to your device.",
-		  "granularPermissions": ["photo"]
+          "granularPermissions": [
+            "photo"
+          ]
         }
       ]
     ],
@@ -33,7 +35,8 @@
       "supportsTablet": true,
       "infoPlist": {
         "NSPhotoLibraryUsageDescription": "Allow photo-app-fe to access your photos.",
-        "NSPhotoLibraryAddUsageDescription": "Allow photo-app-fe to save photos to your device."
+        "NSPhotoLibraryAddUsageDescription": "Allow photo-app-fe to save photos to your device.",
+        "ITSAppUsesNonExemptEncryption": false
       },
       "bundleIdentifier": "com.photoapp.fe"
     },
@@ -47,7 +50,11 @@
       "permissions": [
         "READ_MEDIA_IMAGES",
         "READ_EXTERNAL_STORAGE",
-        "ACCESS_FINE_LOCATION"
+        "ACCESS_FINE_LOCATION",
+        "android.permission.READ_EXTERNAL_STORAGE",
+        "android.permission.WRITE_EXTERNAL_STORAGE",
+        "android.permission.READ_MEDIA_VISUAL_USER_SELECTED",
+        "android.permission.READ_MEDIA_IMAGES"
       ]
     },
     "web": {
@@ -58,10 +65,11 @@
     "experiments": {
       "typedRoutes": true
     },
+    "owner": "yenhan",
     "extra": {
       "router": {},
       "eas": {
-        "projectId": "1d57ab55-b8ae-4dea-8f56-80628051b38c"
+        "projectId": "38867774-6125-4c56-a09d-b82dce36b468"
       }
     }
   }
