--- a/eas.json
+++ b/eas.json
@@ -16,6 +16,10 @@
     }
   },
   "submit": {
-    "production": {}
+    "production": {
+      "ios": {
+        "appleId": "guatemala3081@gmail.com"
+      }
+    }
   }
 }
