--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
+    "@react-native-camera-roll/camera-roll": "^7.10.2",
+    "@react-native-community/datetimepicker": "^8.5.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
-    "expo": "^54.0.13",
+    "expo": "^54.0.19",
     "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.9",
-    "expo-dev-client": "~6.0.15",
+    "expo-dev-client": "~6.0.17",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.9",
@@ -35,6 +37,7 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-image-viewing": "^0.2.2",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
