20251110 작업내역 반영
.안드로이드 버그 수정 .변경된 UI가이드 적용 .그외 마이너한 처리 수정

--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "icon": "./assets/images/icon.png",
     "scheme": "photoappfe",
     "userInterfaceStyle": "automatic",
-    "newArchEnabled": true,
+    "newArchEnabled": false,
     "plugins": [
       "expo-router",
       "expo-dev-client",
@@ -49,6 +49,7 @@
       "package": "com.photoapp.fe",
       "permissions": [
         "READ_MEDIA_IMAGES",
+        "READ_MEDIA_VIDEO",
         "READ_EXTERNAL_STORAGE",
         "ACCESS_FINE_LOCATION"
       ]
