--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "ios:clean": "rm -rf ios && npx expo prebuild --platform ios --clean",
     "ios:run": "npx expo run:ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "android": "expo run:android",
+    "ios": "expo run:ios"
   },
   "dependencies": {
     "@amplitude/analytics-react-native": "^1.5.16",
@@ -46,8 +48,9 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-uuid": "^2.0.3",
+    "react-native-share": "^12.2.1",
     "react-native-svg": "15.12.1",
+    "react-native-uuid": "^2.0.3",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1"
