--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-date-picker": "^5.0.13",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-image-viewing": "^0.2.2",
     "react-native-reanimated": "~4.1.1",
