add sunny apps info and update button label according to languange settings

--- a/app.json
+++ b/app.json
@@ -29,7 +29,8 @@
             "photo"
           ]
         }
-      ]
+      ],
+      "react-native-localize"
     ],
     "ios": {
       "supportsTablet": true,
