--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "date-fns": "^4.1.0",
     "expo": "^54.0.31",
     "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.9",
