add logo design

--- a/app.json
+++ b/app.json
@@ -37,12 +37,13 @@
         "NSPhotoLibraryAddUsageDescription": "Allow photo-app-fe to save photos to your device.",
         "ITSAppUsesNonExemptEncryption": false
       },
-      "bundleIdentifier": "com.photoapp.fe"
+      "bundleIdentifier": "com.photoapp.fe",
+      "icon": "./assets/images/ios-icon.png"
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "foregroundImage": "./assets/images/android-foreground.png",
+        "backgroundImage": "./assets/images/android-background.png"
       },
       "edgeToEdgeEnabled": true,
       "package": "com.photoapp.fe",
